lox-tests/tests/constructor/return_value.stderr
ERROR: Cannot return a value from an `init` method
 --> 3:5
  |
3 |     return "result"; // Error at 'return': Can't return a value from an initializer.
  |     ^--------------^
